# aftershock-prediction-mlops

./: .dockerignore  LICENSE  Makefile  README.md  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements-ci.txt  requirements-dev.txt
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: mlops-automation.yaml
config/: params.yaml
data/processed/: .gitignore  features.csv  features.parquet  gempa_20260512_110527_processed.csv  gempa_20260512_110527_processed.parquet  gempa_20260512_110527_processed.parquet.dvc  gempa_20260512_153811_processed.csv  gempa_20260512_153811_processed.parquet.dvc  gempa_20260514_140913_processed.csv  gempa_20260514_140913_processed.parquet
data/raw/: .gitignore  gempa_20260512_110527.csv  gempa_20260512_110527.csv.dvc  gempa_20260512_153811.csv.dvc  gempa_20260514_140913.csv  ingestion_manifest.csv  ingestion_manifest.csv.dvc
docs/: LK01_inisiasi_proyek.md  branching_strategy.md  data_schema.md  lk03_etl_pipeline.md
gempawas-mlops/: requirements.txt
gempawas-mlops/config/: params.yaml
gempawas-mlops/docs/: architecture.md  omori_law.md
gempawas-mlops/docs/figures/: lk03_arsitektur_etl.mmd
gempawas-mlops/src/: __init__.py  features.py  inference.py  monitor.py
logs/: cm_run2_smote_tuned_n200_d4.txt  cm_run3_smotetomek_thresh040.txt  feature_importance_run1_smote_light_n100_d3.txt  report_run3_smotetomek_thresh040.txt
mlruns/0/: meta.yaml
mlruns/146410740840464838/: meta.yaml
mlruns/146410740840464838/17d0f13b4f4a45628efa9a8a72910d38/: meta.yaml
mlruns/146410740840464838/17d0f13b4f4a45628efa9a8a72910d38/artifacts/: cm_run3_deep_n200_d7_lr0.05.txt  feature_importance_run3_deep_n200_d7_lr0.05.txt
mlruns/146410740840464838/17d0f13b4f4a45628efa9a8a72910d38/metrics/: accuracy  f1_score  roc_auc
mlruns/146410740840464838/17d0f13b4f4a45628efa9a8a72910d38/tags/: mlflow.runName  mlflow.source.git.commit
mlruns/146410740840464838/22a22c4bee8847c3938ca7235a1f5c90/: meta.yaml
mlruns/146410740840464838/24e9cc0eda864e54a0c9ae0a829403eb/: meta.yaml
mlruns/146410740840464838/490b4f6ea54e435e879473a8e93f0e38/: meta.yaml
mlruns/146410740840464838/794dc35fc98e414faed6976862a69efc/: meta.yaml
mlruns/146410740840464838/8ce77fa8ff5e415caf239fee53002d3a/: meta.yaml
mlruns/146410740840464838/a00cbb4782194bb297c7b311f512f6b8/: meta.yaml
mlruns/146410740840464838/b264e22ead7d4285934543996a7df681/: meta.yaml
mlruns/146410740840464838/d09e6ae42f2442e8a46ea3413155b28e/: meta.yaml
mlruns/146410740840464838/f4c243b6af0b4465a5476e19b9aa15fc/: meta.yaml
mlruns/models/gempawas-aftershock-classifier/: meta.yaml
models/: .gitignore  champion_model_v1.dvc  model_registry_metadata.json
scripts/: auto_register.py  validate_threshold.py
src/: build_features.py  ci_evaluate.py  features.py  ingestion.py  model_registry.py  train.py
src/data/: __init__.py  ingest_data.py  preprocess.py
tests/: test_features.py  test_train.py
(+125 files in other folders)
